--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "engines": {
+  "node": ">=20.0.0"
+}
+
 }
