--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
@@ -54,7 +54,6 @@
     "tailwindcss": "^3.4.17"
   },
   "engines": {
-  "node": ">=20.0.0"
-}
-
+    "node": ">=20.0.0"
+  }
 }
