--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "slick-carousel": "^1.8.1",
     "stripe": "^17.5.0",
     "swiper": "^11.2.0",
+    "vercel": "^41.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
